fix: upload logo
